@@ -70,6 +70,7 @@
     * 0949 quicksearch: now able to search for multiple hosts at once...
     * 1052 SEC: index start URL can not be used to redirect to absolute URLs anymore...
     * 1085 quicksearch: multiple hostname matches now lead to the searchhost view instead of the hosts view...
+    * 1047 Virtual Host Tree: Allow to use topic as tree level...
     * 0945 FIX: Sidebar snapin "Problem hosts": Now excludes hosts and services in downtime
     * 1036 FIX: doc/treasures/downtime: fix --url option, better error output
     * 1074 FIX: Fix Virtual Host Tree snapin...
